--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:               lf / notes
+title:               lf / home
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
